Fix up display issue when anchor tag wraps a code tag

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -41,6 +41,10 @@ html[data-theme="dark"] {
   --ifm-alert-color: var(--ifm-color-gray-900);
 }
 
+a code {
+  color: var(--ifm-code-color);
+}
+
 .admonition.alert--warning svg {
   fill: var(--ifm-color-gray-900);
   stroke: var(--ifm-color-gray-900);
